# mera-rl

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  MERA  MERA_repo  MIGRATION.md  README.md  env.sh  main.py  pyproject.toml  run_all_grpo.sh  run_eval.sh  run_eval_sft_intermediate.sh  run_everything_again.sh  run_grpo_task.sh  run_sft_fast.sh
.prime/: lab.json
benchmarks/mera/: README.md  apply_to_checkout.sh
benchmarks/mera/lm-eval-patches/lm_eval/models/: vllm_causallms.py
benchmarks/mera/scripts/: run_benchmark.sh  run_benchmark_all.sh  run_benchmark_all_localscore.sh  run_benchmark_fixed.sh  run_benchmark_gen.sh
configs/: local.env.example
configs/eval/: mera-fair-smoke.toml  mera-fair-suite.toml  minimal.toml  multi-env.toml
configs/gepa/: base.toml  wordle.toml
configs/rl/: alphabet-sort.toml  gsm8k.toml  math-python.toml  reverse-text.toml  wiki-search.toml  wordle.toml
configs/rl/local/: mera-rlvr-smoke.toml  mera-rlvr-train.toml
configs/rl/mera/: task_map.toml
configs/sft/: mera-fair-no-lora.toml  mera-fair.toml  mera-smoke-no-lora.toml  mera-smoke.toml
environments/: AGENTS.md  mera_common.py  mera_common_code.py
environments/bps/: pyproject.toml
environments/chegeka/: README.md  chegeka.py
environments/lcs/: lcs.py  pyproject.toml
environments/mamuramu/: README.md  mamuramu.py  pyproject.toml
environments/mathlogicqa/: mathlogicqa.py
environments/multiq/: multiq.py  pyproject.toml
environments/parus/: parus.py
environments/rcb/: rcb.py
environments/rudetox/: README.md
environments/ruethics/: README.md  ruethics.py
environments/ruhatespeech/: README.md  pyproject.toml  ruhatespeech.py
environments/ruhumaneval/: README.md  pyproject.toml
environments/rummlu/: README.md
environments/rumodar/: rumodar.py
environments/rumultiar/: README.md  pyproject.toml  rumultiar.py
environments/ruopenbookqa/: README.md  pyproject.toml  ruopenbookqa.py
environments/rutie/: rutie.py
environments/ruworldtree/: ruworldtree.py
environments/rwsd/: pyproject.toml  rwsd.py
environments/simplear/: README.md
environments/use/: use.py
mera/configs/prime_rl/base/: infer.toml  orch.toml  train.toml
mera/configs/prime_rl/bps/: orch.toml
mera/configs/prime_rl/chegeka/: orch.toml
mera/configs/prime_rl/lcs/: orch.toml
mera/configs/prime_rl/mamuramu/: infer.toml  orch.toml  train.toml
mera/configs/prime_rl/mathlogicqa/: orch.toml
mera/configs/prime_rl/multiq/: orch.toml
mera/configs/prime_rl/parus/: orch.toml
mera/configs/prime_rl/rcb/: orch.toml
mera/configs/prime_rl/rucodeeval/: orch.toml
mera/configs/prime_rl/rudetox/: orch.toml
mera/configs/prime_rl/rummlu/: orch.toml
mera/configs/prime_rl/rumodar/: orch.toml
mera/configs/prime_rl/rumultiar/: orch.toml
mera/configs/prime_rl/ruopenbookqa/: orch.toml
mera/configs/prime_rl/rutie/: orch.toml
mera/configs/prime_rl/ruworldtree/: orch.toml
mera/configs/prime_rl/rwsd/: orch.toml
mera/configs/prime_rl/sft/: base.toml
mera/configs/prime_rl/simplear/: orch.toml
mera/configs/prime_rl/use/: orch.toml
mera/datasets/: mera_sft_dataset.py
mera/environments/: mera_common.py
mera/environments/bps/: README.md  bps.py
mera/environments/chegeka/: chegeka.py  pyproject.toml
mera/environments/lcs/: README.md  lcs.py
mera/environments/mamuramu/: mamuramu.py
mera/environments/mathlogicqa/: README.md  mathlogicqa.py  pyproject.toml
mera/environments/multiq/: README.md  multiq.py
mera/environments/parus/: README.md  parus.py  pyproject.toml
mera/environments/rcb/: README.md  pyproject.toml  rcb.py
mera/environments/rucodeeval/: README.md  pyproject.toml  rucodeeval.py
mera/environments/rudetox/: pyproject.toml  rudetox.py
mera/environments/ruethics/: pyproject.toml
mera/environments/ruhhh/: README.md  pyproject.toml  ruhhh.py
mera/environments/ruhumaneval/: ruhumaneval.py
mera/environments/rummlu/: pyproject.toml  rummlu.py
mera/environments/rumodar/: README.md  pyproject.toml  rumodar.py
mera/environments/rumultiar/: rumultiar.py
mera/environments/ruopenbookqa/: ruopenbookqa.py
mera/environments/rutie/: README.md  pyproject.toml  rutie.py
mera/environments/ruworldtree/: README.md  pyproject.toml  ruworldtree.py
mera/environments/rwsd/: README.md  rwsd.py
mera/environments/simplear/: pyproject.toml  simplear.py
mera/environments/use/: README.md  pyproject.toml  use.py
mera/scripts/: eval.py  eval_base.py  grpo.py  sft.py  sft_dataset.py
mera/tools/: remote_setup.sh  ship_and_setup.sh
outputs/eval_base/submission/: BPS.json  CheGeKa.json  MaMuRAMu.json  RCB.json  SimpleAr.json  chegeka.json  lcs.json  multiq.json  ruCodeEval.json  ruDetox.json  ruHHH.json  ruHateSpeech.json  ruHumanEval.json  ruWorldTree.json  ruethics.json  ruhatespeech.json  rutie.json
outputs/eval_base/submission_files/: mathlogicqa.json  parus.json  ruCodeEval.json  ruHumanEval.json  ruMMLU.json  ruModAr.json  ruWorldTree.json  rudetox.json  ruhhh.json  rumultiar.json  rwsd.json  use.json
prime_lab_rl/: __init__.py  constants.py  eval_utils.py  hf_utils.py  manifest.py  sft_dataset.py
scripts/: audit_sft_dataset.py  build_sft_dataset.py  check_env_actions.sh  download_hosted_checkpoint.py  publish_hf_artifact.py  push_envs.sh  render_eval_config.py  render_hosted_config.py  report_sft_metrics.py  run_all_hosted.sh  run_eval_stage.py  run_mera_pipeline.py  run_rlvr_local.py  run_rlvr_local_sequential.py  run_rlvr_sequential.sh  run_rlvr_smoke.sh  run_sft_local.py  run_sft_test.sh  run_task_hosted.sh
tests/: test_envs.py  test_pipeline_scripts.py  test_sft_launcher.py
