[project]
name = "mera"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.1",
    "boto3>=1.42.42",
    "datasets>=2.14.4",
    "multiprocess>=0.70.15",
    "omegaconf>=2.3.0",
    "peft>=0.18.1",
    "protobuf>=6.33.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "torch==2.5.1+cu124",
    "tqdm>=4.66.5",
    "transformers>=4.57.6",
    "trl>=0.10.1",
    "verifiers>=0.1.8.post1",
    "vllm>=0.7.3",
    "wandb>=0.24.2",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
