[project]
name = "prime-lab-rl"
version = "0.1.0"
description = "Hosted Prime RL workspace for MERA environments"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "huggingface-hub>=0.34.0",
    "peft>=0.17.0",
    "transformers>=4.57.0",
    "wandb>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prime_lab_rl"]
