[project]
name = "mathlogicqa"
description = "MERA MathLogicQA environment"
tags = ["mera", "math"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.8",
    "datasets"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["mathlogicqa.py"]
