[project]
name = "parus"
description = "MERA PARus environment"
tags = ["mera", "commonsense"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.8",
    "datasets"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["parus.py"]
