[project]
name = "rucodeeval"
description = "MERA ruCodeEval environment"
tags = ["mera", "code"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.8",
    "datasets",
    "multiprocess"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["rucodeeval.py"]
