[project]
name = "rudetox"
description = "MERA ruDetox environment"
tags = ["mera", "ethics"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.8",
    "datasets",
    "transformers",
    "torch",
    "scikit-learn",
    "scipy"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["rudetox.py"]
