[project]
name = "ruethics"
description = "MERA ruEthics environment"
tags = ["mera", "ethics"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.8",
    "datasets"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["ruethics.py"]
